--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,21 @@
+
+
+
+
+
+<app-player 
+*ngFor="let player of game.players; let i = index"  
+[name]="player"
+[playerActive]="i == game.currentPlayer"
+[ngStyle]="{'top.px': 100 + (i * 90)}" 
+style="top:130px" 
+class="player-position">
+</app-player>
+
 <div class="field">
+
+
+
     <div class="card-stack">
         
         <!-- Card stack -->
@@ -24,3 +41,7 @@
 
     </div>
 </div>
+
+<button (click)="openDialog()" class="btn-add" mat-fab color="primary" aria-label="Example icon button with a delete icon">
+    <mat-icon>add</mat-icon>
+</button>
