--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -71,3 +71,11 @@
     right: 30px;   
     bottom: 30px;
 }
+
+.pin-bottom{
+    position: absolute;
+    bottom: 2rem;
+    left: 7rem;
+    right: 7rem;
+
+}
