working on responsivness

--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,7 +1,8 @@
 
 <mat-card>
-    <mat-card-title style="padding:0 16px">{{ card ? title : 'Please pick a card' }}</mat-card-title>
+    <mat-card-title style="padding:0 16px">{{ card ? title : 'Please add atleast 2 player' }}</mat-card-title>
     
 
-    <mat-card-content> {{card ? description : 'Please click on the card stack to draw the next card'}}</mat-card-content>
+    <mat-card-content> {{card ? description : 'Please click the "+" button for add a new player'}}</mat-card-content>
+    
 </mat-card>
