--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -6,6 +6,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: 800px){
+         overflow: hidden!important;
+    }
     .start-box{
         height: 100vh;
     }
@@ -25,6 +29,12 @@
 
                 filter: brightness(1.25);
             }
+
+            @media (max-width: 800px){
+                width: 20rem!important;
+           }
         }
     }
 }
+
+
